fix configs + rename user_name to username in bots progress
